--- a/new-log-viewer/public/index.html
+++ b/new-log-viewer/public/index.html
@@ -4,7 +4,8 @@
     <title>Log Viewer</title>
     <meta charset="utf-8">
     <meta name="description" content="YScope Log Viewer">
-    <meta name="keywords" content="yscope clp debug debugging large log logs s3 scanner viewer vscode">
+    <meta name="keywords"
+          content="yscope clp debug debugging large log logs s3 scanner viewer vscode">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body>
