Add drag-and-drop file load functionality.

--- a/new-log-viewer/public/index.html
+++ b/new-log-viewer/public/index.html
@@ -7,6 +7,9 @@
     <meta name="keywords"
           content="yscope clp debug debugging large log logs s3 scanner viewer vscode">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
 </head>
 <body>
 <div id="root"></div>
