--- a/new-log-viewer/public/index.html
+++ b/new-log-viewer/public/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+          href="https://fonts.googleapis.com/css2?family=Inter:wght@300...700&display=swap">
 </head>
 <body>
 <div id="root"></div>
