--- a/new-log-viewer/public/index.html
+++ b/new-log-viewer/public/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300..700&display=swap">
 </head>
 <body>
 <div id="root"></div>
