new-log-viewer: Replace fallback font with `Inter`. (#78)

--- a/new-log-viewer/public/index.html
+++ b/new-log-viewer/public/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Inter:wght@300..700&display=swap">
 </head>
 <body>
 <div id="root"></div>
