Add Roboto Mono font and apply it to LogLevelChip.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Inter:wght@300..700&display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap">
 </head>
 <body>
 <div id="root"></div>
