Update favicon path in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Log Viewer</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="YScope Log Viewer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0， maximum-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
