--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="YScope Log Viewer">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0， maximum-scale=1" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
     <link rel="stylesheet"
