Add back meta "keywords" in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="YScope Log Viewer">
+    <meta name="keywords"
+          content="yscope clp debug debugging large log logs s3 scanner viewer vscode">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
