build: Migrate from Webpack to Vite (closes #146, resolves #238). (#175)
Co-authored-by: kirkrodrigues <2454684+kirkrodrigues@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <title>Log Viewer</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="YScope Log Viewer">
     <meta name="keywords"
           content="yscope clp debug debugging large log logs s3 scanner viewer vscode">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" crossorigin href="https://fonts.gstatic.com">
     <link rel="stylesheet"
@@ -16,5 +17,6 @@
 </head>
 <body>
 <div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
